--- a/App or Troll/app/src/main/res/layout/activity_accelerometer.xml
+++ b/App or Troll/app/src/main/res/layout/activity_accelerometer.xml
@@ -10,9 +10,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Temp text"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
+        android:text="Test"
+        android:id="@+id/accelTexr"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
