--- a/App or Troll/app/src/main/res/layout/activity_main.xml
+++ b/App or Troll/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,13 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Collect Data"
+        android:id="@+id/butCollectActivity"
+        android:layout_below="@+id/accelButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
