--- a/App or Troll/app/src/main/res/layout/activity_ml__bluetooth_collection.xml
+++ b/App or Troll/app/src/main/res/layout/activity_ml__bluetooth_collection.xml
@@ -7,4 +7,144 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.ander.myapplication.ML_BluetoothCollection">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Location:"
+        android:id="@+id/tvXLoc"
+        android:textSize="22dp"
+        android:layout_alignTop="@+id/spLocation"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spLocation"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/tvXB2"
+        android:layout_alignEnd="@+id/tvXB2"
+        android:layout_toRightOf="@+id/tvXLoc"
+        android:layout_toEndOf="@+id/tvXLoc" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar5"
+        android:layout_below="@+id/tvB0"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Signal Strengths"
+        android:id="@+id/tvXSS"
+        android:textSize="22dp"
+        android:layout_below="@+id/spLocation"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Beacon 0:"
+        android:id="@+id/tvXB0"
+        android:layout_below="@+id/tvXSS"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Beacon 1:"
+        android:id="@+id/tvXB1"
+        android:layout_alignTop="@+id/tvXB0"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Beacon 2:"
+        android:id="@+id/tvXB2"
+        android:layout_alignTop="@+id/tvXB1"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvB0"
+        android:layout_below="@+id/tvXB0"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvB1"
+        android:layout_below="@+id/tvXB1"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvB2"
+        android:layout_below="@+id/tvXB2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Scan"
+        android:id="@+id/btScan"
+        android:layout_below="@+id/progressBar5"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/tvData"
+        android:layout_alignRight="@+id/btSave"
+        android:layout_alignEnd="@+id/btSave" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Point"
+        android:id="@+id/btAdd"
+        android:enabled="false"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/btScan"
+        android:layout_alignEnd="@+id/btScan" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save to file"
+        android:id="@+id/btSave"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:enabled="false"
+        android:layout_toStartOf="@+id/tvXB1"
+        android:layout_toLeftOf="@+id/tvXB1" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvData"
+        android:layout_alignParentBottom="true"
+        android:layout_alignTop="@+id/btScan"
+        android:layout_alignLeft="@+id/tvXB1"
+        android:layout_alignStart="@+id/tvXB1"
+        android:maxLines="1000"
+        android:scrollbars="vertical"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:scrollHorizontally="false" />
+
 </RelativeLayout>
