--- a/App or Troll/app/src/main/res/layout/activity_main.xml
+++ b/App or Troll/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,22 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Collect Data"
+        android:text="Collect Data (Milestone 3)"
         android:id="@+id/butCollectActivity"
+        android:layout_marginTop="26dp"
         android:layout_below="@+id/accelButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/btPrototype"
+        android:layout_alignEnd="@+id/btPrototype" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Run prototype (end product)"
+        android:id="@+id/btPrototype"
+        android:layout_marginTop="24dp"
+        android:layout_below="@+id/butCollectActivity"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
