--- a/App or Troll/app/src/main/res/layout/activity_main.xml
+++ b/App or Troll/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,15 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mathias&apos; Smadrekage"
+        android:id="@+id/btSmadrekage"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/btPrototype"
+        android:layout_alignEnd="@+id/btPrototype" />
+
 </RelativeLayout>
